pass to gis format migrate to junit 4 framework decrease the nearest distance for getnearestfrom in osmdao improve housenumber extracter chang proxying in security.xml